# feishu-transcriber

./: .env.example  .gitignore  README.md  pyproject.toml
config/summary_styles/: verbatim_summary.yaml
docs/: transcribe-skill.md
docs/specs/: 2026-04-30-feishu-transcriber-enhancement-design.md  2026-04-30-transcriber-enhancement-plan.md
scripts/: deploy.sh
src/audio_transcribe/: __main__.py  aligner.py  diarizer.py  transcriber.py
src/feishu_download/: __main__.py  client.py  local.py
src/media_to_audio/: __main__.py  converter.py
src/pipeline_run/: __main__.py  runner.py
src/shared/: config.py  exit_codes.py  logging.py
src/text_summarize/: __main__.py  prompts.py  summarizer.py
tests/: conftest.py
tests/unit/: test_aligner.py  test_audio_transcribe.py  test_diarizer.py  test_feishu_download.py  test_media_to_audio.py  test_pipeline_run.py  test_prompts_enhanced.py  test_text_summarize.py
