[project]
name = "feishu-transcriber"
version = "0.1.0"
description = "Atomic CLI tools for transcribing Feishu audio/video files and generating meeting minutes"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.0.0",
    "funasr>=1.0.0",
    "modelscope>=1.0.0",
    "addict>=2.4.0",
    "simplejson>=3.19.0",
    "sortedcontainers>=2.4.0",
    "hdbscan>=0.8.0",
    "pillow>=10.0.0",
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feishu_download", "src/media_to_audio", "src/audio_transcribe", "src/text_summarize", "src/pipeline_run", "src/shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
target-version = "py311"
line-length = 120
